--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,11 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
+    Basic css file
     Created on : 10-Nov-2016, 4:08:30 PM
     Author     : xiaof
 */
 .padding-20{padding:20px;}
+.margin-10{margin:10px}
 .center-box{margin:0 auto;}
-.airport{cursor: pointer;}
+.pointer{cursor: pointer;}
+.active{background-color: red;}
+.padding-10{padding: 10px;}
