--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,1 @@
-/* 
-    Basic css file
-    Created on : 10-Nov-2016, 4:08:30 PM
-    Author     : xiaof
-*/
-.padding-20{padding:20px;}
-.padding-10{padding: 10px;}
-.padding-5{padding: 5px;}
-.margin-10{margin:10px}
-.center-box{margin:0 auto;}
-.pointer{cursor: pointer;}
-.active{background-color: red;}
+.padding-20{padding:20px}.padding-10{padding:10px}.padding-5{padding:5px}.margin-10{margin:10px}.center-box{margin:0 auto}.pointer{cursor:pointer}.active{background-color:red}th{text-align:center}
