--- a/resources/assets/sass/style.css
+++ b/resources/assets/sass/style.css
@@ -1,11 +1,12 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
+    Basic css file
     Created on : 10-Nov-2016, 4:08:30 PM
     Author     : xiaof
 */
 .padding-20{padding:20px;}
-
+.padding-10{padding: 10px;}
+.padding-5{padding: 5px;}
+.margin-10{margin:10px}
+.center-box{margin:0 auto;}
+.pointer{cursor: pointer;}
+.active{background-color: red;}
